# mistral_ocr

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/mistral_ocr/: Cargo.toml
crates/mistral_ocr/src/: lib.rs  main.rs
crates/mistral_ocr_gui/: Cargo.toml
crates/mistral_ocr_gui/src/: main.rs
mistral_ocr/: Cargo.toml
mistral_ocr/src/: lib.rs  main.rs
mistral_ocr_gui/: Cargo.toml
mistral_ocr_gui/src/: main.rs
src/: main.rs
