[package]
name = "mistral_ocr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
base64 = "0.22.1"
clap = { version = "4.5.59", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
zip = { version = "8.1.0", features = ["deflate"] }
