[package]
name = "mistral_ocr"
version = "0.3.0"
edition = "2024"
description = "CLI tool to convert PDF, image, and document files into Markdown using Mistral AI's OCR API"
authors = ["Danila Gornushko <me@okhsunrog.dev>"]
license = "MIT"
repository = "https://github.com/okhsunrog/mistral_ocr"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
anyhow = "1.0.101"
base64 = "0.22.1"
clap = { version = "4.5.59", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
zip = { version = "8.1.0", features = ["deflate"] }

[dev-dependencies]
tempfile = "3.27.0"
